fix(form): selections z-index error

--- a/common/assets/css/combine/4__all.css
+++ b/common/assets/css/combine/4__all.css
@@ -739,3 +739,7 @@ form .row .nav-tabs-custom {
     box-shadow: none;
     margin-bottom: 0px;
 }
+
+.select2-dropdown.select2-dropdown--below {
+    z-index: 10005;
+}
